# x7710_PROTOCOL

./: instructions.md
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/account_registry/: Cargo.toml
contracts/account_registry/src/: lib.rs
contracts/account_registry/test_snapshots/tests/: test_get_policy_contract.1.json  test_get_policy_contract_unknown_owner.1.json  test_is_authorized_agent.1.json  test_register_account_success.1.json  test_register_empty_agents_rejected.1.json
contracts/execution_router/: Cargo.toml
contracts/execution_router/src/: lib.rs
contracts/execution_router/test_snapshots/tests/: test_execute_action_full_flow.1.json  test_execute_action_policy_rejects_over_limit.1.json  test_execute_action_unauthorized_agent.1.json
contracts/policy_engine/: Cargo.toml
contracts/policy_engine/src/: lib.rs
contracts/policy_engine/test_snapshots/tests/: test_set_policy_expired_expiry.1.json  test_set_policy_success.1.json  test_validate_action_asset_not_allowed.1.json  test_validate_action_daily_limit.1.json  test_validate_action_expired_policy.1.json  test_validate_action_over_limit.1.json  test_validate_action_success.1.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/lib/: contract-config.ts
frontend/src/: App.css  App.jsx
frontend/src/components/layout/: Navbar.jsx
frontend/src/sections/: Footer.jsx  Hero.jsx  Navbar.jsx  Protocol.jsx
relay/: contract-addresses.json  package-lock.json  package.json
relay/src/: index.ts
relay/src/stellar/: scval-builder.ts
