[workspace]
resolver = "2"
members = [
    "account_registry",
    "policy_engine",
    "execution_router",
]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Reduce parallel code generation units for size
overflow-checks = true # Prevent silent integer overflow (enforced by Stellar CLI)
